--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clickschat: WhatsApp Bot</title>
+    <title>ClicksChat - Chatbot Inteligente para Vendas e Atendimento</title>
+    <meta name="description" content="Automatize suas vendas e atendimento com o ClicksChat! Chatbot inteligente para WhatsApp e redes sociais. Aumente conversões e economize tempo.">
+    <meta name="keywords" content="chatbot para WhatsApp, chatbot de vendas, automação de atendimento, inteligência artificial, chatbot para empresas, assistente virtual, chatbot ClicksChat">
+    <meta name="author" content="ClicksChat">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="ClicksChat - Chatbot Inteligente para Vendas e Atendimento">
+    <meta property="og:description" content="Automatize suas vendas e suporte com um chatbot eficiente. Integração com WhatsApp e redes sociais. Experimente o ClicksChat!">
+    <meta property="og:image" content="https://clickschat.com.br/assets/images/chatbot-hero.png">
+    <meta property="og:url" content="https://clickschat.com.br">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ClicksChat - Chatbot Inteligente para Vendas e Atendimento">
+    <meta name="twitter:description" content="Automatize suas vendas e atendimento com o ClicksChat! Aumente conversões e otimize seu tempo.">
+    <meta name="twitter:image" content="https://clickschat.com.br/assets/images/chatbot-hero.png">
+
 
     <link rel="stylesheet" href="styles.css">
 
